# braandket-circuit

./: .gitignore  README.md  pyproject.toml
braandket_circuit/: __init__.py
braandket_circuit/basics/: __init__.py  operation.py  runtime.py  system.py
braandket_circuit/operations/: __init__.py  alias.py  allocate.py  controlled.py  gates.py  identity.py  matrix.py  measurement.py  remapped.py  sequential.py  state.py
braandket_circuit/operations/gates/: __init__.py  qubit_gates.py
braandket_circuit/operations/operator/: __init__.py  identity.py  matrix.py  operator.py
braandket_circuit/operations/structural/: __init__.py  controlled.py  remapped.py  sequential.py
braandket_circuit/runtimes/: __init__.py  default.py
braandket_circuit/runtimes/braandket/: apply_impls.py  impls.py  runtime.py
braandket_circuit/traits/: __init__.py  apply.py  op_impl.py  utils.py
braandket_circuit/traits/apply/: __init__.py  apply.py  runtime.py
braandket_circuit/traits/compile/: __init__.py  compile.py  compile_pass.py
braandket_circuit/traits/convert/: __init__.py  conversion.py  convert.py
braandket_circuit/traits/freeze/: __init__.py  freeze.py
braandket_circuit/traits_impls/: __init__.py
braandket_circuit/utils/: __init__.py  struct.py
docs/: Changelogs.md
docs/examples/: example1_simple_circuit.ipynb  example2_multiple_qubits.ipynb  example3_functional_usage.ipynb  example4_parameterized_circuit.ipynb  example5_custom_operations.ipynb
tests/operations/: test_custom.py  test_measurement.py  test_sequential.py  test_state.py
tests/traits/apply/: test_symbolic.py
(+34 files in other folders)
