[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "braandket-circuit"
version = "0.2.4"
description = "A library for working with quantum circuits based on BraAndKet."
authors = []
readme = "README.md"
packages = [{ include = "braandket_circuit" }]

[tool.poetry.dependencies]
python = "^3.10"
braandket = "^0.8.6.post1"
zkl-registries = { git = "https://gitee.com/zhengkeli/zkl-pythonx-registries", tag = "v0.1.2" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
