[project]
name = "zkl-quantum-circuit"
version = "0.3.0-dev"
readme = "README.md"
description = "A library for working with quantum circuits based on BraAndKet."
authors = [{ name = "Keli Zheng", email = "zhengkeli2009@126.com" }]

requires-python = ">=3.10"
dependencies = [
    "braandket>=0.8.6.post1",
    "zkl-registries@git+https://gitee.com/zhengkeli/zkl-pythonx-registries@v0.1.2"
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
